test/expected/explain_cast_lll.out
explain (long long long)x
                   ^
20: error: "long" can not be combined with "long long"
